--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URL=
+MONGODB_URL=mongodb+srv://interneth3ro:wg2NB4eubPq04uMt@cluster0.p7nd6px.mongodb.net/?retryWrites=true&w=majority
